video reveal html text

--- a/templates/block/block--video-reveal.html.twig
+++ b/templates/block/block--video-reveal.html.twig
@@ -38,7 +38,7 @@
 					<span class="ucb-video-reveal-icon">
 						<i class="fa-solid fa-circle-play"></i>
 					</span>
-					<span class="ucb-video-reveal-text">{{ content.field_video_reveal_text}}</span>
+					<span class="ucb-video-reveal-text">{{ content.field_video_reveal_text|render}}</span>
 				</div>
 				<div class="ucb-video-reveal-image">
 					{{ content.field_video_reveal_image|render }}
