--- a/templates/content/node--ucb-issue.html.twig
+++ b/templates/content/node--ucb-issue.html.twig
@@ -18,7 +18,7 @@
 
   <div class="row">
     <div class="col-sm-4 issue-sidebar-banner">
-      {{ content.field_ucb_issue_image|render }}
+      {{ content.field_ucb_issue_cover_image|render }}
       <div class="secondary-issue-image">
         {{ content.field_ucb_issue_secondary_image }}
       </div>
