--- a/css/block/content-list.css
+++ b/css/block/content-list.css
@@ -22,6 +22,8 @@
 }
 
 .ucb-content-list-image {
+	width: calc(100px + var(--bs-gutter-x));
+	height: auto;
 	margin-bottom: 20px;
 	max-width: 100%;
 }
@@ -74,6 +76,10 @@
 	padding-right: 0;
 }
 
+.ucb-content-list-image-container {
+	width: fit-content;
+}
+
 .ucb-content-list-display-title .ucb-content-list-list {
 	margin-bottom: 0;
 }
@@ -95,4 +101,30 @@
 
 .ucb-content-list-person-titles .ucb-content-list-person-title:last-child::after, .ucb-content-list-person-departments .ucb-content-list-person-department:last-child::after, .ucb-content-list-person-contact .ucb-content-list-person-contact-item:last-child::after {
 	content: '';
+}
+
+.ucb-content-list-img {
+	width: calc(100px + var(--bs-gutter-x));
+	height: auto;
+	margin-bottom: 20px;
+  }
+
+
+.ucb-content-list-sidebar .ucb-content-list-row,
+.ucb-content-list-teaser .ucb-content-list-row,
+.ucb-content-list-condensed .ucb-content-list-row, 
+.ucb-content-list-full .ucb-content-list-row {
+	display: flex;
+	flex-direction: row;
+}
+
+.ucb-content-list-sidebar .ucb-content-list-text-container {
+	width: fit-content;
+	flex-grow: 1;
+}
+
+.ucb-content-list-full .ucb-content-list-text-container,
+.ucb-content-list-condensed .ucb-content-list-text-container,
+.ucb-content-list-teaser .ucb-content-list-text-container {
+	flex: 1;
 }
