--- a/css/ucb-latest-issue-block.css
+++ b/css/ucb-latest-issue-block.css
@@ -8,6 +8,9 @@
 .ucb-latest-issue-card{
     max-width: 20%;
     margin-right: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .ucb-latest-issue-title{
