--- a/templates/block/block--ucb-latest-issues-block.html.twig
+++ b/templates/block/block--ucb-latest-issues-block.html.twig
@@ -17,5 +17,9 @@
     {{ label }}
   </h2>
   {{ title_suffix }}
-    <latest-issue-block></latest-issue-block>
+    <latest-issue-block>
+      <div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
+        <i class="fa-solid fa-spinner fa-3x fa-spin-pulse"></i>
+      </div>
+    </latest-issue-block>
 	</div>
