--- a/templates/content/node--ucb-issue-archive.html.twig
+++ b/templates/content/node--ucb-issue-archive.html.twig
@@ -22,5 +22,9 @@
     {{ content.body }}
   </div>
   {% endif %}
-  <ucb-issue-archive></ucb-issue-archive>
+  <ucb-issue-archive>
+    <div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
+      <i class="fa-solid fa-spinner fa-3x fa-spin-pulse"></i>
+    </div>
+  </ucb-issue-archive>
 </div>
