--- a/templates/field/field--field-bs-background-style.html.twig
+++ b/templates/field/field--field-bs-background-style.html.twig
@@ -1,27 +1,27 @@
 {% for item in items %}
 
 	{% if item|render|striptags|trim == 'White' %}
-		{% set blockBackground = 'bs_background_white' %}
+		{% set blockBackground = 'bs-background-white' %}
 	{% elseif item|render|striptags|trim == 'Gray' %}
-		{% set blockBackground = 'bs_background_gray' %}
+		{% set blockBackground = 'bs-background-gray' %}
 	{% elseif item|render|striptags|trim == 'Dark Gray' %}
-		{% set blockBackground = 'bs_background_dark_gray' %}
+		{% set blockBackground = 'bs-background-dark-gray' %}
 	{% elseif item|render|striptags|trim == 'Tan' %}
-		{% set blockBackground = 'bs_background_tan' %}
+		{% set blockBackground = 'bs-background-tan' %}
 	{% elseif item|render|striptags|trim == 'Light Blue' %}
-		{% set blockBackground = 'bs_background_light_blue' %}
+		{% set blockBackground = 'bs-background-light-blue' %}
 	{% elseif item|render|striptags|trim == 'Medium Blue' %}
-		{% set blockBackground = 'bs_background_medium_blue' %}
+		{% set blockBackground = 'bs-background-medium-blue' %}
 	{% elseif item|render|striptags|trim == 'Dark Blue' %}
-		{% set blockBackground = 'bs_background_dark_blue' %}
+		{% set blockBackground = 'bs-background-dark-blue' %}
 	{% elseif item|render|striptags|trim == 'Light Green' %}
-		{% set blockBackground = 'bs_background_light_green' %}
+		{% set blockBackground = 'bs-background-light-green' %}
 	{% elseif item|render|striptags|trim == 'Brick' %}
-		{% set blockBackground = 'bs_background_brick' %}
+		{% set blockBackground = 'bs-background-brick' %}
 	{% elseif item|render|striptags|trim == 'Outline' %}
-		{% set blockBackground = 'bs_background_outline' %}
+		{% set blockBackground = 'bs-background-outline' %}
 	{% elseif item|render|striptags|trim == 'Underline' %}
-		{% set blockBackground = 'bs_background_underline' %}
+		{% set blockBackground = 'bs-background-underline' %}
 	{% else %}
 		{% set blockBackground = 'text-block-none' %}
 	{% endif %}
