--- a/templates/field/field--field-bs-heading-style.html.twig
+++ b/templates/field/field--field-bs-heading-style.html.twig
@@ -1,15 +1,15 @@
 {% for item in items %}
 
 {% if item|render|striptags|trim == 'Hero' %}
-	{% set blockHeadingStyle = 'bs_heading_style_hero' %}
+	{% set blockHeadingStyle = 'hero' %}
 {% elseif item|render|striptags|trim == 'Hero Bold' %}
-	{% set blockHeadingStyle = 'bs_heading_style_hero_bold' %}
+	{% set blockHeadingStyle = 'hero strong' %}
 {% elseif item|render|striptags|trim == 'Supersize' %}
-	{% set blockHeadingStyle = 'bs_heading_style_supersize' %}
+	{% set blockHeadingStyle = 'supersize' %}
 {% elseif item|render|striptags|trim == 'Supersize Bold' %}
-	{% set blockHeadingStyle = 'bs_heading_style_supersize_bold' %}
+	{% set blockHeadingStyle = 'supersize bold' %}
 {% else %}
-	{% set blockHeadingStyle = 'bs_heading_style_default' %}
+	{% set blockHeadingStyle = 'bs-heading-style-default' %}
 {% endif %}
 
     {{ blockHeadingStyle }}
