--- a/templates/field/field--field-bs-icon-color.html.twig
+++ b/templates/field/field--field-bs-icon-color.html.twig
@@ -1,22 +1,22 @@
 {% for item in items %}
 	{% if item|render|striptags|trim == 'Gray' %}
-		{% set blockIconColor = 'bs_icon_color_gray' %}
+		{% set blockIconColor = 'bs-icon-color-gray' %}
 	{% elseif item|render|striptags|trim == 'Gold' %}
-		{% set blockIconColor = 'bs_icon_color_gold' %}
+		{% set blockIconColor = 'bs-icon-color-gold' %}
 	{% elseif item|render|striptags|trim == 'Blue' %}
-		{% set blockIconColor = 'bs_icon_color_blue' %}
+		{% set blockIconColor = 'bs-icon-color-blue' %}
 	{% elseif item|render|striptags|trim == 'Green' %}
-		{% set blockIconColor = 'bs_icon_color_green' %}
+		{% set blockIconColor = 'bs-icon-color-green' %}
 	{% elseif item|render|striptags|trim == 'Orange' %}
-		{% set blockIconColor = 'bs_icon_color_orange' %}
+		{% set blockIconColor = 'bs-icon-color-orange' %}
 	{% elseif item|render|striptags|trim == 'Purple' %}
-		{% set blockIconColor = 'bs_icon_color_purple' %}
+		{% set blockIconColor = 'bs-icon-color-purple' %}
 	{% elseif item|render|striptags|trim == 'Red' %}
-		{% set blockIconColor = 'bs_icon_color_red' %}
+		{% set blockIconColor = 'bs-icon-color-red' %}
 	{% elseif item|render|striptags|trim == 'Yellow' %}
-		{% set blockIconColor = 'bs_icon_color_yellow' %}
+		{% set blockIconColor = 'bs-icon-color-yellow' %}
 	{% else %}
-		{% set blockIconColor = 'bs_icon_color_default' %}
+		{% set blockIconColor = 'bs-icon-color-default' %}
 	{% endif %}
 
     {{ blockIconColor }}
