--- a/templates/field/field--field-bs-icon-position.html.twig
+++ b/templates/field/field--field-bs-icon-position.html.twig
@@ -1,11 +1,11 @@
 {% for item in items %}
 
 {% if item|render|striptags|trim == 'Offset' %}
-	{% set blockIconPosition = 'bs_icon_position_offset' %}
+	{% set blockIconPosition = 'bs-icon-position-offset' %}
 {% elseif item|render|striptags|trim == 'Top' %}
-	{% set blockIconPosition = 'bs_icon_position_top' %}
+	{% set blockIconPosition = 'bs-icon-position-top' %}
 {% else %}
-	{% set blockIconPosition = 'bs_icon_position_default' %}
+	{% set blockIconPosition = 'bs-icon-position-default' %}
 {% endif %}
 
     {{ blockIconPosition }}
