--- a/templates/field/field--field-bs-title-font-scale.html.twig
+++ b/templates/field/field--field-bs-title-font-scale.html.twig
@@ -1,11 +1,11 @@
 {% for item in items %}
 
 {% if item|render|striptags|trim == 'Increase' %}
-	{% set blockTitleScale = 'bs_title_scale_increase' %}
+	{% set blockTitleScale = 'bs-title-scale-increase' %}
 {% elseif item|render|striptags|trim == 'Decrease' %}
-	{% set blockTitleScale = 'bs_title_scale_decrease' %}
+	{% set blockTitleScale = 'bs-title-scale-decrease' %}
 {% else %}
-	{% set blockTitleScale = 'bs_title_scale_default' %}
+	{% set blockTitleScale = 'bs-title-scale-default' %}
 {% endif %}
 
     {{ blockTitleScale }}
