--- a/templates/block/block--content-list.html.twig
+++ b/templates/block/block--content-list.html.twig
@@ -35,10 +35,37 @@
 	]
 %}
 
-{% block content %}<div{{ attributes.addClass(classes) }}>
-	{{ title_prefix }}
-	{% if label %}<h2{{ title_attributes }}>{{ label }}</h2>{% endif %}
-	{{ title_suffix }}
+{# Block/Title/Icon Styles #}
+{% set blockStyles = [
+	content.field_bs_background_style|render|striptags|trim,
+	content.field_bs_content_font_scale|render|striptags|trim,
+	content.field_bs_icon_position|render|striptags|trim,
+	content.field_bs_heading_alignment|render|striptags|trim,
+	content.field_bs_title_font_scale|render|striptags|trim,
+	''
+] %}
+
+{% set iconColor = content.field_bs_icon_color|render|striptags|trim %}
+{% set iconSize = content.field_bs_icon_size|render|striptags|trim %}
+{% set headingTag = content.field_bs_heading|render|striptags|trim %}
+{% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
+
+{% block content %}
+	<div{{attributes.addClass(classes,blockStyles)}}>
+		{{ title_prefix }}
+		{% if label %}
+			<div class="block-title {{ headingStyle }}">
+				<{{ headingTag }}{{title_attributes}}>
+					<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
+						{{ content.field_bs_icon }}
+					</span>
+					<span class="block-title-text">
+						{{ label }}
+					</span>
+				</{{ headingTag }}>
+			</div>
+		{% endif %}
+		{{ title_suffix }}
 	<div class="ucb-content-list-container">
 		{% if display == 'full' %}{% for item in items %}<div class="row ucb-content-list-row">
 			{% set image = item.entity.field_ucb_article_thumbnail.entity.field_media_image ?? item.entity.field_ucb_person_photo.entity.field_media_image ?? item.entity.field_how_to_initial_image.entity.field_media_image %}
