--- a/templates/block/block--image-gallery.html.twig
+++ b/templates/block/block--image-gallery.html.twig
@@ -21,26 +21,50 @@
   ]
 %}
 
+{# Block/Title/Icon Styles #}
+{% set blockStyles = [
+	content.field_bs_background_style|render|striptags|trim,
+	content.field_bs_content_font_scale|render|striptags|trim,
+	content.field_bs_icon_position|render|striptags|trim,
+	content.field_bs_heading_alignment|render|striptags|trim,
+	content.field_bs_title_font_scale|render|striptags|trim,
+	''
+] %}
+
+{% set iconColor = content.field_bs_icon_color|render|striptags|trim %}
+{% set iconSize = content.field_bs_icon_size|render|striptags|trim %}
+{% set headingTag = content.field_bs_heading|render|striptags|trim %}
+{% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
+
 {% block content %}
-	<div{{attributes.addClass(classes)}}>
+	<div{{attributes.addClass(classes,blockStyles)}}>
 		{{ title_prefix }}
 		{% if label %}
-			<h2{{title_attributes}}>{{ label }}</h2>
+			<div class="block-title {{ headingStyle }}">
+				<{{headingTag}}{{title_attributes}}>
+					<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
+						{{ content.field_bs_icon }}
+					</span>
+					<span class="block-title-text">
+						{{ label }}
+					</span>
+				</{{headingTag}}>
+			</div>
 		{% endif %}
 		{{ title_suffix }}
 		<div class="row row-cols-lg-6 row-cols-md-3 row-cols-2 gallery-div">
 			{% for key, item in content['#block_content'].field_image_gallery_photo  %}
-			{% if key|first != '#' %}
-				{% if item.entity.field_media_image_caption.value|render|striptags|trim %}
-					{% set photoDescription = item.entity.field_media_image_caption.value|render|striptags|trim %}
-				{% else %}
-					{% set photoDescription = "" %}
-				{% endif %}
-				<div class="col gallery-item">
-					<a href="{{ file_url(item.entity.field_media_image.entity.fileuri) }}" class="glightbox ucb-gallery-lightbox" data-gallery="gallery{{ content['#block_content'].id() }}" data-glightbox="description: {{ photoDescription }} ">
-						{{ item|view }}
-					</a>
-				</div>
+				{% if key|first != '#' %}
+					{% if item.entity.field_media_image_caption.value|render|striptags|trim %}
+						{% set photoDescription = item.entity.field_media_image_caption.value|render|striptags|trim %}
+					{% else %}
+						{% set photoDescription = "" %}
+					{% endif %}
+					<div class="col gallery-item">
+						<a href="{{ file_url(item.entity.field_media_image.entity.fileuri) }}" class="glightbox ucb-gallery-lightbox" data-gallery="gallery{{ content['#block_content'].id() }}" data-glightbox="description: {{ photoDescription }} ">
+							{{ item|view }}
+						</a>
+					</div>
 				{% endif %}
 			{% endfor %}
 		</div>
